<resources>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAXYdK08B5KB5SBOfHSuaByLSz1aOpMqtA</string>
    <string name="app_name">Beautiful Country: Australia</string>
    <string name="welcome">Hello! Today is:</string>
    <string name="txtNeedBiometric">Click button for authentication!</string>
    <string name="txtBtnBiometric">Authentication</string>
    <string name="error">Error</string>
    <string name="Successfully">Successfully!</string>
    <string name="Failed">Failed!</string>
    <string name="Enable_Location">Enable Location</string>
    <string name="Message">Your Locations Settings is set to \"Off\". Please enable location to use this app.</string>
    <string name="PositiveButton">OK</string>
    <string name="Settings">Settings</string>
    <string name="start_successfully">Service start successfully</string>
    <string name="service_running">Service is already running</string>
    <string name="gps_enable">GPS enable</string>
    <string name="turn_on_gps">Please turn on GPS</string>
    <string name="OK">OK</string>
    <string name="button_get_location">Get location</string>
    <string name="map">Map</string>
    <string name="desc">desc</string>
    <string name="notification_channel">APP_Channel_ID</string>
    <string name="notification_channel_description">Channel ID for APP</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera">Camera</string>
    <string name="exit">Exit</string>
    <string name="_10_items_on_page">10 items on page</string>
    <string name="_15_items_on_page">15 items on page</string>
    <string name="_20_items_on_page">20 items on page</string>
    <string name="views">views</string>
    <string name="photo">Photo</string>
    <string name="other">other</string>
    <string name="change">Change current camera resolution:</string>
    <string name="making_your_device_discoverable">Making your device discoverable</string>
    <string name="scan_for_devices">Scan for devices</string>
    <string name="paired_devices">Paired devices</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="other_available_devices">Other Available Devices</string>
    <string name="connect">Connect</string>
    <string name="Error">Error</string>
    <string name="Nothing_to_show">Nothing to show!</string>
    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="capture_mode_camera">Camera</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_title">Confirm</string>
    <string name="cameraBtn">cameraBtn</string>
    <string name="ibgallery">ibGallery</string>
</resources>
